# csci545-assignment1

./: Dockerfile  README.md  nutrition_logs.db  pyproject.toml  run_server.sh
assignments/a2/: anki_contrast_checker.py
src/csci545_assignment1/: __init__.py  app.py
src/scs/: __init__.py  app.py  database.py
